--- a/hospital/templates/important_ambulance_contacts.html
+++ b/hospital/templates/important_ambulance_contacts.html
@@ -89,236 +89,236 @@
               <tr>
                <th>Serial No</th>
                 <th>Ambulance Name</th>
-                <th>Location</th>
-                <th>Contact number</th>
+                <th style="text-align: center;">Location</th>
+                <th>Ph. Number</th>
               </tr>
               <tr>
                 <td>1</td>
                 <td>Addya Maa Ambulance & Medical Service</td>
                 <td>#108-A, Dr G S Bose Rd, Kata Pukur, Kasba, Kolkata, West Bengal 700039</td>
-                <td>+91 8420946146</td>
+                <td> <a href="tel:+918420946146">8420946146</a></td>
             </tr>
             <tr>
                 <td>2</td>
                 <td>Air Ambulance Services in Kolkata - Panchmukhi</td>
                 <td> Waterloo Street, Cossipore, Lalbajar, College Square, Kolkata, West Bengal 700012</td>
-                <td>+91 9825263125</td>
+                <td><a href="tel:+919825263125">9825263125</a></td>
             </tr>
             <tr>
                 <td>3</td>
                 <td>Air Ambulance Services in Kolkata - Panchmukhi</td>
                 <td>Benia Para Ln, Beniapukur, Kolkata, West Bengal 700014</td>
-                <td>+91 </td>
+                <td><a href="tel:+919955990333">9955990333</a></td>
             </tr>
             <tr>
                 <td>4</td>
                 <td>Air Rescuers World Wide Pvt.Ltd</td>
                 <td> No. 3, Motilal Colony, Airport, PO, Dum Dum, Kolkata, West Bengal 700081</td>
-                <td>+91 9977331118</td>
+                <td><a href="tel:+919977331118">9977331118</a></td>
             </tr>
             <tr>
                 <td>5</td>
                 <td>Ambulance Sadharan Sammilani</td>
                 <td> 149, Haridhan Chakraborty Sarani, Aghor Sarani Thakur Pur More, Paschatya Para, Sonarpur, Kolkata, West Bengal 700150</td>
-                <td>+91 8017175441</td>
+                <td><a href="tel:+918017175441">8017175441</a></td>
             </tr>
             <tr>
                 <td>6</td>
                 <td>Anjuman Mufidul Islam</td>
                 <td>20, Noor Ali Ln, Beniapukur, Kolkata, West Bengal 700014</td>
-                <td>033 2284 7728</td>
+                <td><a href="tel:03322847728">033 2284 7728</a></td>
             </tr>
             <tr>
                 <td>7</td>
                 <td>Aradhya Ambulance</td>
                 <td>MR BANGUR HOSPITAL</td>
-                <td>+91 9830516703</td>
+                <td><a href="tel:+919830516703">9830516703</a></td>
             </tr>
             <tr>
                 <td>8</td>
                 <td>BISWAJIT AMBULANCE Service Saltlake</td>
                 <td>Anandalok hospital,saltlake, Dk7/3, DK Block, Sector II, Bidhannagar, Kolkata, West Bengal 700091</td>
-                <td>+91 8420977575</td>
+                <td><a href="tel:+918420977575">8420977575</a></td>
             </tr>
             <tr>
                 <td>9</td>
                 <td>Bluebells Ambulance Service</td>
                 <td>35 A, Shyama Prasad Mukherjee Rd, Jatin Das Park, Shyama Prasad Colony, Bhowanipore, Kolkata, West Bengal 700025</td>
-                <td>+91 9830034475</td>
+                <td><a href="tel:+919830034475">9830034475</a></td>
             </tr>
             <tr>
                 <td>10</td>
                 <td>Book My Ambulance</td>
                 <td> Topsia More, East Topsia, Topsia, Kolkata, West Bengal 700046</td>
-                <td>+91 8100010154</td>
+                <td><a href="tel:+918100010154">8100010154</a></td>
             </tr>
             <tr>
                 <td>11</td>
                 <td>Essential Service Centre </td>
                 <td>42/8, Bedia Danga 2nd Ln, LALKUTHY, Kasba, Kolkata, West Bengal 700039</td>
-                <td>+91 9774535256</td>
+                <td><a href="tel:+919774535256">9774535256</a></td>
             </tr>
             <tr>
                 <td>12</td>
                 <td>Falcon Emergency Train Rail Ambulance Services In Kolkata</td>
                 <td>Girish Vidya Ratna Ln, Machuabazar, Kolkata, West Bengal 700009</td>
-                <td>+91 9205909876</td>
+                <td><a href="tel:+919205909876">9205909876</a></td>
             </tr>
             <tr>
                 <td>13</td>
                 <td>Hindustan Ambulance Service</td>
                 <td>P-147, Prosanta Sure Nagar, Near 18B/1 Bus Stand, Ruby Hospital, West Bengal 700107</td>
-                <td>+91 9836909839</td>
+                <td><a href="tel:+919836909839">9836909839</a></td>
             </tr>
             <tr>
                 <td>14</td>
                 <td>Hindusthan Ambulance Services</td>
                 <td>  No. 182, 1-B, Bose Pukur Rd, Bosepukur, Gariahat, Kolkata, West Bengal 700029</td>
-                <td>+91 9521245124</td>
+                <td><a href="tel:+919521245124">9521245124</a></td>
             </tr>
             <tr>
                 <td>15</td>
                 <td>Ishan Ambulance Service Provider</td>
                 <td> Plot No-BE 70, East Kolkata Township, K.M.D.A Project, P.O Varba, West Bengal 700107</td>
-                <td>+91 9836072444</td>
+                <td><a href="tel:+919836072444">9836072444</a></td>
             </tr>
             <tr>
                 <td>16</td>
                 <td>King Air and Train Ambulance Services</td>
                 <td> Dr Lalit Banerjee Sarani, Calcutta Medical College, College Square, Kolkata, West Bengal 700012</td>
-                <td>+91 7091360310</td>
+                <td><a href="tel:+917091360310">7091360310</a></td>
             </tr>
             <tr>
                 <td>17</td>
                 <td>KMC Ambulance Service</td>
                 <td>Chittaranjan Ave, Calcutta University, Bowbazar, Kolkata, West Bengal 700073</td>
-                <td>033 2219 7202</td>
+                <td><a href="tel:03322197202">033 2219 7202</a></td>
             </tr>
             <tr>
                 <td>18</td>
                 <td>LOKENATH AMBULANCE SERVICE</td>
                 <td>CK Block-44, ANANDALOK HOSPITAL ,Sector II, Bidhannagar, near 9 No. Water Tank, Kolkata, West Bengal 700091</td>
-                <td>+91 9831341671</td>
+                <td><a href="tel:+919831341671">9831341671</a></td>
             </tr>
             <tr>
                 <td>19</td>
                 <td>LOKENATH AMBULANCE SERVICE</td>
                 <td>1F, Raja Subodh Chandra Mallick Rd, Jadavpur, Kolkata, West Bengal 700032</td>
-                <td>+91 8013476160</td>
+                <td><a href="tel:+918013476160">8013476160</a></td>
             </tr>
             <tr>
                 <td>20</td>
                 <td>M/s. Jain Kalyan Singh</td>
                 <td> 265, Rabindra Sarani, Chitpur, Pathuriaghata St, Malapara, Santoshpur, Beniatola, Kolkata, West Bengal 700007</td>
-                <td>033 2474 6190</td>
+                <td><a href="tel:03324746190">033 2474 6190</a></td>
             </tr>
             <tr>
                 <td>21</td>
                 <td>Medivic Aviation Air Ambulance Services in Kolkata</td>
                 <td>Nilachal Rd, Nilachal, Birati, North Dumdum, West Bengal 700134</td>
-                <td>+91 </td>
+                <td><a href="tel:+91">+91 </a></td>
             </tr>
             <tr>
                 <td>22</td>
                 <td>Medivic Train Rail Ambulance Services in Kolkata</td>
                 <td>Nawab Abdul Latif St, Maula Ali, Taltala, Kolkata, West Bengal 700014</td>
-                <td>+91 95806123829</td>
+                <td><a href="tel:+9195806123829">95806123829</a></td>
             </tr>
             <tr>
                 <td>23</td>
                 <td>Meera Seva Kendra</td>
                 <td>255, Petrol Pump, 23, Netaji Subhash Chandra Bose Rd, beside Naktala, Suryanagar, Regent Grove, Bansdroni, Kolkata, West Bengal 700047</td>
-                <td>+91 6291317341</td>
+                <td><a href="tel:+916291317341">6291317341</a></td>
             </tr>
             <tr>
                 <td>24</td>
                 <td>MM AMBULANCE Service</td>
                 <td>KB Block, Sector III, Bidhannagar, Kolkata, West Bengal 700098</td>
-                <td>+91 8671539937</td>
+                <td><a href="tel:+918671539937">8671539937</a></td>
             </tr>
             <tr>
                 <td>25</td>
                 <td>Narayan Ambulance Service</td>
                 <td>241, DPS Rd, Opp.M R Bangur Hospital, Tollygunge, Kolkata, West Bengal 700033</td>
-                <td>+91 9163635162</td>
+                <td><a href="tel:+919163635162">9163635162</a></td>
             </tr>
             <tr>
                 <td>26</td>
                 <td>Nirbhar Ambulance & Hearse Van service</td>
                 <td>Madhya Para, Shantiniketan Apartment, NIRBHAR VIP near Airport, Narayanpur Rd, Kaikhali, West Bengal 700052</td>
-                <td>+91 8582935898</td>
+                <td><a href="tel:+918582935898">8582935898</a></td>
             </tr>
             <tr>
                 <td>27</td>
                 <td>Panchmukhi Air and Train Ambulance Services</td>
                 <td> Lansdowne Pl, Dover Terrace, Ballygunge, Kolkata, West Bengal 700019</td>
-                <td>+91 </td>
+                <td><a href="tel:+91">+91 </a></td>
             </tr>
             <tr>
                 <td>28</td>
                 <td>Pritam Ambulance Services</td>
                 <td> P-14/1, Jadavpur Station Rd, Jadavpur, Kolkata, West Bengal 700032</td>
-                <td>+91 7059484445</td>
+                <td><a href="tel:+917059484445">7059484445</a></td>
             </tr>
             <tr>
                 <td>29</td>
                 <td>RADHA KRISHNA AMBULANCE SERVICE</td>
                 <td>DK 7/3 , ANANDALAK HOSPITAL, Bidhannagar, Sector II, Kolkata, West Bengal 700091</td>
-                <td>+91 9830354617</td>
+                <td><a href="tel:+919830354617">9830354617</a></td>
             </tr>
             <tr>
                 <td>30</td>
                 <td>RAJKUMAR DAY NIGHT AMBULANCE SERVICE</td>
                 <td>MOHANPUR KUNDU BARI KALAYANI HIGH ROAD,NONA -CHANDANPUKUR, Kolkata, West Bengal 700122</td>
-                <td>+91 9831342643</td>
+                <td><a href="tel:+919831342643">9831342643</a></td>
             </tr>
             <tr>
                 <td>31</td>
                 <td>St John Ambulance</td>
                 <td>41/1A, Townshend Rd, Paddapukur, Bhowanipore, Kolkata, West Bengal 700025</td>
-                <td>033 2486 3926</td>
+                <td><a href="tel:03324863926">033 2486 3926</a></td>
             </tr>
             <tr>
                 <td>32</td>
                 <td>St. John Ambulance Association</td>
                 <td>Hem Chandra Naskar Rd, Phool Bagan, Kankurgachi, Kolkata, West Bengal 700010</td>
-                <td>+91 9830023653</td>
+                <td><a href="tel:+919830023653">9830023653</a></td>
             </tr>
             <tr>
                 <td>33</td>
                 <td>St. John Ambulance Association</td>
                 <td>71/1, Bagbazar St, Bag Bazar Colony, Baghbazar, Kolkata, West Bengal 700003</td>
-                <td>+91 9831520999</td>
+                <td><a href="tel:+919831520999">9831520999</a></td>
             </tr>
             <tr>
                 <td>34</td>
                 <td>Swargadut</td>
                 <td>RG KAR MEDICAL COLLEGE</td>
-                <td>+91 9830955965</td>
+                <td><a href="tel:+919830955965">9830955965</a></td>
             </tr>
             <tr>
                 <td>35</td>
                 <td>Tapas Ambulance</td>
                 <td> Mohanpur uttarpara Barrackpore, Kolkata, West Bengal 700121</td>
-                <td>+91 9830751716</td>
+                <td><a href="tel:+919830751716">9830751716</a></td>
             </tr>
             <tr>
                 <td>36</td>
                 <td>The Golden Hour</td>
                 <td>Near Kalighat Metro Station, Gariahat Rd, Kolkata, West Bengal 700029</td>
-                <td>+91 9831444428</td>
+                <td><a href="tel:+919831444428">9831444428</a></td>
             </tr>
             <tr>
                 <td>37</td>
                 <td>The Golden Hour </td>
                 <td>Gariahat, Near, Triangular Park, Kolkata, West Bengal 700029</td>
-                <td>+91 9748835218</td>
+                <td><a href="tel:+919748835218">9748835218</a></td>
             </tr>
             <tr>
                 <td>38</td>
                 <td>UTTAM AMBULANCE SERVICE</td>
                 <td> 57/6, Barrackpore Trunk Rd, Phool Bagan, Cossipore, Kolkata, West Bengal 700002</td>
-                <td>+91 94613424513</td>
+                <td><a href="tel:+9194613424513">94613424513</a></td>
             </tr>  
           </table>
             </div>
