--- a/hospital/templates/important_blood_bank_contacts.html
+++ b/hospital/templates/important_blood_bank_contacts.html
@@ -96,222 +96,222 @@
                   <td>1</td>
                   <td>Ashok Blood Bank</td>
                   <td>308, Jodhpur Park, Kolkata, West Bengal 700068</td>
-                  <td>033 2472 0333</td>
+                  <td><a href="tel:03324720333">033 2472 0333</a></td>
                 </tr>
                 <tr>
                   <td>2</td>
                   <td>Association Of Voluntary Blood Donors W B</td>
                   <td>20 A, Fordyce Lane, Entally, Kolkata - 700014</td>
-                  <td>033 2227 1022</td>
+                  <td><a href="tel:03322271022">033 2227 1022</a></td>
                 </tr>
           
           
                 <tr>
-                  <td>4</td>
+                  <td>3</td>
                   <td>Bani mondal lab</td>
                   <td> 2, 7, Narkeldanga N Rd, Raja Nabakrishna Street, Narkeldanga, Kolkata, West Bengal 700011</td>
-                  <td>078902 77509</td>
+                  <td><a href="tel:+917890277509">7890277509</a></td>
                 </tr>
                 
                 <tr>
-                  <td>5</td>
+                  <td>4</td>
                   <td>Bhoruka Blood Bank</td>
                   <td>No.63, Rafi Ahmed Kidwai Rd, Esplanade, Mullick Bazar, Taltala, Kolkata, West Bengal 700016</td>
-                  <td>033 2265 8092</td>
+                  <td><a href="tel:03322658092">033 2265 8092</a></td>
                 </tr>
                 <tr>
-                  <td>6</td>
+                  <td>5</td>
                   <td>Biotech Tie Up Pvt Ltd</td>
                   <td> Fe12/2, Vidyasagar Pally, Baguiati, Kolkata - 700059</td>
-                  <td>033 2570 8323</td>
+                  <td><a href="tel:03325708323">033 2570 8323</a></td>
                 </tr>
               <tr>
-                  <td>7</td>
+                  <td>6</td>
                   <td>Blood Bankk</td>
                   <td>Calcutta Medical College, College Square, Kolkata, West Bengal 700073</td>
-                  <td>033 2255 1538</td>
+                  <td><a href="tel:03322551538">033 2255 1538</a></td>
                 </tr>
                 <tr>
-                  <td>8</td>
+                  <td>7</td>
                   <td>Blood Bankk(Barasat District Hospital)</td>
                   <td> Banamalipur, Kolkata, West Bengal 700124</td>
-                  <td>033 2584 0268</td>
+                  <td><a href="tel:03325840268">033 2584 0268</a></td>
                 </tr>
           
           
                 <tr>
-                  <td>9</td>
+                  <td>8</td>
                   <td>Calcutta Hospital</td>
                   <td>7/2, Diamond Harbour Road, Kolkata - 700027</td>
-                  <td>98244 03696</td>
+                  <td><a href="tel:+919824403696">9824403696</a></td>
+                </tr>
+                <tr>
+                  <td>9</td>
+                  <td>Calcutta National Medical College & Hospital Blood Bank</td>
+                  <td>24, Gorachand Rd, Beniapukur, Kolkata, West Bengal 700014</td>
+                  <td><a href="tel:03322848397">033 2284 8397</a></td>
                 </tr>
                 <tr>
                   <td>10</td>
-                  <td>Calcutta National Medical College & Hospital Blood Bank</td>
-                  <td>24, Gorachand Rd, Beniapukur, Kolkata, West Bengal 700014</td>
-                  <td>033 2284 8397</td>
+                  <td> Central Blood Bank</td>
+                  <td>Vivekananda Road, Beadon Street, Kolkata - 700006, Near Maniktalla More</td>
+                  <td><a href="tel:03323510619">033 2351 0619</a></td>
                 </tr>
                 <tr>
                   <td>11</td>
-                  <td> Central Blood Bank</td>
-                  <td>Vivekananda Road, Beadon Street, Kolkata - 700006, Near Maniktalla More</td>
-                  <td>033 2351 0619</td>
-                </tr>
-                <tr>
-                  <td>12</td>
                   <td>Chbttaranjan Hospital </td>
                   <td>No 14 Gora Chand Road, Kolkata - 700014</td>
-                  <td>94280 00223</td>
+                  <td><a href="tel:+919428000223">9428000223</a></td>
                 </tr>
           
+          
+                <tr>
+                  <td>12</td>
+                  <td>Federation of Indian Blood Donors Organisations(FIBDO)</td>
+                  <td>30/1/1, Nilmoni Mitra St, Girish Park, Garanhatta, Beniatola, Kolkata, West Bengal 700006</td>
+                  <td><a href="tel:+919830244388">9830244388</a></td>
+                </tr>
           
                 <tr>
                   <td>13</td>
-                  <td>Federation of Indian Blood Donors Organisations(FIBDO)</td>
-                  <td>30/1/1, Nilmoni Mitra St, Girish Park, Garanhatta, Beniatola, Kolkata, West Bengal 700006</td>
-                  <td>098302 44388</td>
-                </tr>
-          
-                <tr>
-                  <td>14</td>
                   <td>Health Point Blood Bank</td>
                   <td>56, Sarat Bose Rd, Chakraberia, Ballygunge, Kolkata, West Bengal 700019</td>
-                  <td>033 3057 5735</td>
+                  <td><a href="tel:03330575735">033 3057 5735</a></td>
                 </tr>
           
               <tr>
-                  <td>15</td>
+                  <td>14</td>
                   <td>IBTM&IH</td>
                   <td>205, Vivekananda Rd, Manicktala, Sahitya Parishad, Market(East, Kolkata, West Bengal 700006</td>
-                  <td>033 2351 0620</td>
+                  <td><a href="tel:03323510620">033 2351 0620</a></td>
+                </tr>
+                <tr>
+                  <td>15</td>
+                  <td>Indian Blood Bank</td>
+                  <td>8, Narkeldanga Main Road, Kadapara, Phool Bagan, Kankurgachi, Kolkata - 700010</td>
+                  <td><a href="tel:03364610972">033 6461 0972</a></td>
                 </tr>
                 <tr>
                   <td>16</td>
                   <td>Indian Blood Bank</td>
-                  <td>8, Narkeldanga Main Road, Kadapara, Phool Bagan, Kankurgachi, Kolkata - 700010</td>
-                  <td>033 6461 0972</td>
+                  <td>81/C, Narkeldanga Main Rd, Near Swabhumi, Kadapara, Phool Bagan, Kankurgachi, Kolkata, West Bengal 700054</td>
+                  <td><a href="tel:+919038010972">90380 10972</a></td>
                 </tr>
                 <tr>
                   <td>17</td>
-                  <td>Indian Blood Bank</td>
-                  <td>81/C, Narkeldanga Main Rd, Near Swabhumi, Kadapara, Phool Bagan, Kankurgachi, Kolkata, West Bengal 700054</td>
-                  <td>090380 10972</td>
-                </tr>
-                <tr>
-                  <td>18</td>
                   <td>Institute of Blood Transfusion</td>
                   <td> 205, Vivekananda Rd, Manicktala, Garpar, Machuabazar, Kolkata, West Bengal 700009</td>
-                  <td>033 2351 0619</td>
+                  <td><a href="tel:03323510619">033 2351 0619</a></td>
+                </tr>
+          
+                <tr>
+                  <td>18</td>
+                  <td>Kothari Blood Bank</td>
+                  <td>8/3, Alipore Road, Alipore, Kolkata - 700027, Near Alipore Zoological Garden</td>
+                  <td><a href="tel:03324567059">033 2456 7059</a></td>
                 </tr>
           
                 <tr>
                   <td>19</td>
-                  <td>Kothari Blood Bank</td>
-                  <td>8/3, Alipore Road, Alipore, Kolkata - 700027, Near Alipore Zoological Garden</td>
-                  <td>033 2456 7059</td>
-                </tr>
-          
-                <tr>
-                  <td>20</td>
                   <td>Life Care Blood Bank</td>
                   <td>204/1B, Linton St, Beniapukur, Kolkata, West Bengal 700014</td>
-                  <td>033 2284 2298</td>
+                  <td><a href="tel:03322842298">033 2284 2298</a></td>
                 </tr>
               <tr>
-                <td>21</td>
+                <td>20</td>
                 <td>Lions District 322B1 Blood Bank</td>
                 <td>27, 5, Esplanade, Chowringhee North, Bow Barracks, Kolkata, West Bengal 700069</td>
-                <td>033 2248 5778</td>
+                <td><a href="tel:03322485778">033 2248 5778</a></td>
               </tr>
              
           
                <tr>
-                  <td>22</td>
+                  <td>21</td>
                   <td>MRS Blood Bank Mgd by Lions BBD Bag Foundation</td>
                   <td>225/227, Rabindra Sarani, Raja Katra, Jorasanko, Kolkata, West Bengal 700007</td>
-                  <td>033 2274 5675</td>
+                  <td><a href="tel:03322745675">033 2274 5675</a></td>
                 </tr>
           
                 <tr>
-                  <td>23</td>
+                  <td>22</td>
                   <td>Nrs Blood Bank</td>
                   <td>Raja Bazar, Sealdah, Kolkata - 700014</td>
-                  <td>82553 34560</td>
+                  <td><a href="tel:+918255334560">82553 34560</a></td>
                 </tr>
           
               
-                <td>24</td>
+                <td>23</td>
                 <td>OM Blood Bank Kolkata</td>
                 <td>133, H/1, Beleghata Main Rd, Seal Lane, Tangra, Kolkata, West Bengal 700015</td>
-                <td> 033 2251 8191</td>
+                <td><a href="tel:03322518191"> 033 2251 8191</a></td>
               </tr>
           
               <tr>
-                <td>25</td>
+                <td>24</td>
                 <td>People`s Blood Bank</td>
                 <td>Ashutosh College, Shyama Prasad Mukherjee Rd, near, Lake Market, Bhowanipore, Kolkata, West Bengal 700025</td>
-                <td> 033 2455 5164</td>
+                <td><a href="tel:03324555164">033 2455 5164</a></td>
               </tr>
              
               <tr>
-                  <td>26</td>
+                  <td>25</td>
                   <td>Quadra</td>
                   <td>S-D-4, Bus Stop, Sonarpur Bhangor Road, Sonarpur Bazar, Bus Stand, Sonarpur, Kolkata, West Bengal 700150</td>
-                  <td> 033 2428 0098</td>
+                  <td><a href="tel:03324280098"> 033 2428 0098</a></td>
                 </tr>
               
           
           
               <tr>
-                  <td>27</td>
+                  <td>26</td>
                   <td>R G Kar Medical College Blood Bank</td>
                   <td>203, Vivekananda Rd, Manicktala, Garpar, Kolkata, West Bengal 700006</td>
-                  <td>033 25331277</td>
+                  <td><a href="tel:03325331277">033 25331277</a></td>
+              </tr>
+              <tr>
+                  <td>27</td>
+                  <td>Ramakrishna Mission Seva Pratisthan Blood Bank</td>
+                  <td>99, Sarat Bose Road, Kalighat, Kolkata - 700026, Near Ramkrishna Mission Seva Pratisthan</td>
+                  <td><a href="tel:03322658092">033 2475 3636</a></td>
               </tr>
               <tr>
                   <td>28</td>
-                  <td>Ramakrishna Mission Seva Pratisthan Blood Bank</td>
-                  <td>99, Sarat Bose Road, Kalighat, Kolkata - 700026, Near Ramkrishna Mission Seva Pratisthan</td>
-                  <td>033 2475 3636</td>
-              </tr>
-              <tr>
-                  <td>29</td>
                   <td>Rotary Narayana Blood Bank</td>
                   <td>C N 5, Kolkata - 700091, Sector 5, Near Wipro</td>
-                  <td>033 2367 3313</td>
+                  <td><a href="tel:03323673313">033 2367 3313</a></td>
               </tr>
                   
           
                <tr>
-                  <td>30</td>
+                  <td>29</td>
                   <td>Sales Marketing Blood</td>
                   <td> Dna 54a, Bidhan Nagar, Bidhan Nagar, Kolkata, West Bengal 700091</td>
-                  <td>033 2367 3423</td>
+                  <td><a href="tel:03323673423">033 2367 3423</a></td>
               </tr>
           
                <tr>
-                  <td>31</td>
+                  <td>30</td>
                   <td>Specialist Corner</td>
                   <td>90, Santoshpur Road, Jadavpur, Rani Rashmoni Bagan, Santoshpur, Kolkata, West Bengal 700032</td>
-                  <td>033 2416 7636</td>
+                  <td><a href="tel:03324167636">033 2416 7636</a></td>
               </tr>
               <tr>
-                <td>32</td>
+                <td>31</td>
                 <td>SSKM Hospital Blood Bank</td>
                 <td>Shikha Sarkar Rd, S.S.K.M. Hospital, Bhowanipore, Kolkata, West Bengal 700020</td>
-                <td>033 2204 1233</td>
+                <td><a href="tel:03322041233">033 2204 1233</a></td>
+              </tr>
+              <tr>
+                  <td>32</td>
+                  <td>Swasti SRL</td>
+                  <td>21/1, Gora Chand Road, Entally, Kolkata - 700014, Near chitranjan hospital </td>
+                  <td><a href="tel:+918926621803">8926621803</a></td>
               </tr>
               <tr>
                   <td>33</td>
-                  <td>Swasti SRL</td>
-                  <td>21/1, Gora Chand Road, Entally, Kolkata - 700014, Near chitranjan hospital </td>
-                  <td>89266 21803</td>
-              </tr>
-              <tr>
-                  <td>34</td>
                   <td>Swastik Blood Bank</td>
                   <td>Hazra, Sarat Bose Road, Kalighat, Kolkata - 700026 </td>
-                  <td>99342 08632</td>
+                  <td><a href="tel:+919934208632">9934208632</a></td>
                 </tr>
           </table>
             </div>
