--- a/hospital/templates/important_hospital_contacts.html
+++ b/hospital/templates/important_hospital_contacts.html
@@ -95,307 +95,307 @@
                 <td>1</td>
                 <td>AMRI Hospital</td>
                 <td>16 17, JC Block Lane, Broadway Rd, Sector III, Bidhannagar, Kolkata, West Bengal 700098</td>
-                <td>033 6606 3800</td>
+                <td><a href="tel:03366063800">033 6606 3800</a></td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>Anandalok Hospital</td>
                 <td>DK-7/3 3rd Avenue Rd, beside National Dairy Development Board, Sector II, Bidhannagar, Kolkata, West Bengal 700091</td>
-                <td>033 2359 2932</td>
+                <td><a href="tel:03323592932">033 2359 2932</a></td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>Apollo Gleneagles Hospitals Limited</td>
                 <td>58, Canal Circular Rd, Kadapara, Phool Bagan, Kankurgachi, Kolkata, West Bengal 700054</td>
-                <td>033 2320 3040</td>
+                <td><a href="tel:03323203040">033 2320 3040</a></td>
               </tr>
               <tr>
                 <td>4</td>
                 <td>B.P. Poddar Hospital & Medical Research Limited</td>
                 <td>71/1, Humayun Kabir Sarani, Block – G, New Alipore, Kolkata, West Bengal 700053</td>
-                <td> 033 4022 6002</td>
+                <td><a href="tel:03340226002">033 4022 6002</a></td>
               </tr>
               <tr>
                 <td>5</td>
                 <td>Beleghata I.D. And B.G. Hospital</td>
                 <td>57, Beleghata Main Rd, Subhas Sarobar Park, Phool Bagan, Beleghata, Kolkata, West Bengal 700010</td>
-                <td> 033 2303 2200</td>
+                <td><a href="tel:03323032200">033 2303 2200</a></td>
               </tr>
               <tr>
                 <td>6</td>
                 <td>Belle Vue Clinic</td>
                 <td>9, Dr. U. N. Brahmachari Street (Formerly Loudon Street), Elgin, Kolkata, West Bengal 700017</td>
-                <td>033 2287 2321</td>
+                <td><a href="tel:03322872321">033 2287 2321</a></td>
               </tr>
               <tr>
                 <td>7</td>
                 <td>Bhagirathi Neotia Woman and Child Care Centre</td>
                 <td> 2, Rawdon St, Mullick Bazar, Park Street area, Kolkata, West Bengal 700017</td>
-                <td>033 4040 5000</td>
+                <td><a href="tel:03340405000">033 4040 5000</a></td>
               </tr>
               <tr>
                 <td>8</td>
                 <td>BM Birla Heart Research Centre | CK Birla Hospitals</td>
                 <td> 1, National Library Ave, Alipore, Kolkata, West Bengal 700027</td>
-                <td>033 3040 3040</td>
+                <td><a href="tel:03330403040">033 3040 3040</a></td>
               </tr>
               <tr>
                 <td>9</td>
                 <td>Calcutta Pay Clinic Hospital</td>
                 <td>New Park St, Madurdaha, Beniapukur, Kolkata, West Bengal 700017</td>
-                <td>+91 8765435696</td>
+                <td><a href="tel:+918765435696">8765435696</a></td>
               </tr>
               <tr>
                 <td>10</td>
                 <td>Charnock Hospital</td>
                 <td> RGM-2103, Tegharia Major Arterial Road, Dhalipara, Tegharia, Newtown, Kolkata, West Bengal 700157</td>
-                <td>033 4050 0500</td>
+                <td><a href="tel:03340500500">033 4050 0500</a></td>
               </tr>
               <tr>
                 <td>11</td>
                 <td>Chittaranjan Seva Sadan And Sishu Sadan Hospital</td>
                 <td>83, Shyama Prasad Mukherjee Rd, Bakul Bagan, Bhowanipore, Kolkata, West Bengal 700026</td>
-                <td>033 2475 4584</td>
+                <td><a href="tel:03324754584">033 2475 4584</a></td>
               </tr>
               <tr>
                 <td>12</td>
                 <td>Columbia Asia Hospital Salt Lake</td>
                 <td>IB-193, Broadway Rd, Sector III, Bidhannagar, Kolkata, West Bengal 700091</td>
-                <td>033 6600 3300</td>
+                <td><a href="tel:03366003300">033 6600 3300</a></td>
               </tr>
               <tr>
                 <td>13</td>
                 <td>Command Hospital</td>
                 <td> 17/1E, Alipore Rd, Alipore Police Line, Alipore, Kolkata, West Bengal 700027</td>
-                <td>033 2479 1567</td>
+                <td><a href="tel:03324791567">033 2479 1567</a></td>
               </tr>
               <tr>
                 <td>14</td>
                 <td>Deshbandhu Nagar Hospital</td>
                 <td>Desh Bandhu Nagar, Baguiati, Kolkata, West Bengal 700059</td>
-                <td>033 2576 2117</td>
+                <td><a href="tel:03325762117">033 2576 2117</a></td>
               </tr>
               <tr>
                 <td>15</td>
                 <td>Esi Hospital</td>
                 <td> 3A / 17, Maharani Swarnamoyee Rd, Raja Bazar, Kolkata, West Bengal 700009</td>
-                <td>033 2350 1977</td>
+                <td><a href="tel:03323501977">033 2350 1977</a></td>
               </tr>
               <tr>
                 <td>16</td>
                 <td>Eskag Sanjeevani Multispeciality Hospital</td>
                 <td> P-48, Khirode Vidyavinode Ave, Bag Bazar Colony, Baghbazar, Kolkata, West Bengal 700003</td>
-                <td>033 4025 1800</td>
+                <td><a href="tel:03340251800">033 4025 1800</a></td>
               </tr>
               <tr>
                 <td>17</td>
                 <td>Flemming Hospital</td>
                 <td>11A, 1H, Topsia Rd, Mirania Gardens, East Topsia, Topsia, Kolkata, West Bengal 700046</td>
-                <td>033 4068 6161</td>
+                <td><a href="tel:03340686161">033 4068 6161</a></td>
               </tr>
               <tr>
                 <td>18</td>
                 <td>Fortis Medical Centre</td>
                 <td> 2/7, Sarat Bose Road, Opp. Minto Park, Kolkata, West Bengal 700020</td>
-                <td>033 6620 2000</td>
+                <td><a href="tel:03366202000">033 6620 2000</a></td>
               </tr>
               <tr>
                 <td>19</td>
                 <td>Genesis Hospital</td>
                 <td>1470, Rajdanga Main Road, Sector C, East Kolkata Twp, Kolkata, West Bengal 700107</td>
-                <td>033 2442 4242</td>
+                <td><a href="tel:03324424242">033 2442 4242</a></td>
               </tr>
               <tr>
                 <td>20</td>
                 <td>HCG EKO Cancer Centre</td>
                 <td> Plot no.- DG-4, Premises, 03-358, Street Number 358, DG Block(Newtown), Action Area I, Newtown, Kolkata, West Bengal 700156</td>
-                <td>+91 7406499999</td>
+                <td><a href="tel:+917406499999">7406499999</a></td>
               </tr>
               <tr>
                 <td>21</td>
                 <td>Humanity Hospital</td>
                 <td> Hanspukur-Kalagachia Road, Hanspukur, Thakurpukur, Bardhanpalli, Joka, Kolkata, West Bengal 700104</td>
-                <td>033 2467 0639</td>
+                <td><a href="tel:03324670639">033 2467 0639</a></td>
               </tr>
               <tr>
                 <td>22</td>
                 <td>ILS Hospitals</td>
                 <td>DD-6, 3rd Ave, Near City Centre, Sector 1, Bidhannagar, Kolkata, West Bengal 700064</td>
-                <td>033 4020 6500</td>
+                <td><a href="tel:03340206500">033 4020 6500</a></td>
               </tr>
               <tr>
                 <td>23</td>
                 <td>Institute Of Neurosciences Kolkata</td>
                 <td>185, 1, Acharya Jagadish Chandra Bose Rd, Park Street area, Kolkata, West Bengal 700017</td>
-                <td>033 4030 9999</td>
+                <td><a href="tel:03340309999">033 4030 9999</a></td>
               </tr>
               <tr>
                 <td>24</td>
                 <td>IPGME&R and SSKM Hospital Kolkata</td>
                 <td> SSKM Hospital Rd, Bhowanipore, Kolkata, West Bengal 700020</td>
-                <td>+91 6290081711</td>
+                <td><a href="tel:+916290081711">6290081711</a></td>
               </tr>
               <tr>
                 <td>25</td>
                 <td>IRIS Multispeciality Hospital</td>
                 <td>82, 1, Raja Subodh Chandra Mallick Rd, next to Big Bazaar, Vidyasagar Colony, Ganguly Bagan, Kolkata, West Bengal 700047</td>
-                <td>+91 8336900450</td>
+                <td><a href="tel:+918336900450">8336900450</a></td>
               </tr>
               <tr>
                 <td>26</td>
                 <td>Kothari Medical Centre</td>
                 <td> 8/3, Alipore Rd, Alipore, Kolkata, West Bengal 700027</td>
-                <td>033 4012 7000</td>
+                <td><a href="tel:03340127000">033 4012 7000</a></td>
               </tr>
               <tr>
                 <td>27</td>
                 <td>Lady Dufferin Victoria Hospital</td>
                 <td> Raj Kumar Chakraborty Ln, near Bank Of India, Baithakkhana, Kolkata, West Bengal 700009</td>
-                <td>033 2350 0771</td>
+                <td><a href="tel:03323500771">033 2350 0771</a></td>
               </tr>
               <tr>
                 <td>28</td>
                 <td>Lions North Calcutta Hospital & Medical Centre</td>
                 <td>141, Regent Park, Ranikuthi, Kolkata, West Bengal 700040</td>
-                <td>033 2377 0076</td>
+                <td><a href="tel:03323770076">033 2377 0076</a></td>
               </tr>
               <tr>
                 <td>29</td>
                 <td>M R Bangur Super Speciality Hospital</td>
                 <td>247, Deshapran Sasmal Rd, Rajendra Prasad Colony, Tollygunge, Kolkata, West Bengal 700033</td>
-                <td>033 2473 3944</td>
+                <td><a href="tel:03324733944">033 2473 3944</a></td>
               </tr>
               <tr>
                 <td>30</td>
                 <td>Medical College Hospital</td>
                 <td>88, College St, Calcutta Medical College, College Square, Kolkata, West Bengal 700073</td>
-                <td>033 2255 1621</td>
+                <td><a href="tel:03322551621">033 2255 1621</a></td>
               </tr>
               <tr>
                 <td>31</td>
                 <td>Mercy Hospital</td>
                 <td>125/1, Park Street, Mullick Bazar, Park Street area, Kolkata, West Bengal 700017</td>
-                <td>033 6635 2003</td>
+                <td><a href="tel:03366322003">033 6635 2003</a></td>
               </tr>
               <tr>
                 <td>32</td>
                 <td>Mission Hospital</td>
                 <td>40-B, 45, Acharya Jagadish Chandra Bose Road, Rippon Street, Taltala, Kolkata, West Bengal 700017</td>
-                <td>033 2229 8787</td>
+                <td><a href="tel:03322298787">033 2229 8787</a></td>
               </tr>
               <tr>
                 <td>33</td>
                 <td>Narayana Multispeciality Hospital</td>
                 <td>78, Jessore Rd, Barasat, Kolkata, West Bengal 700127</td>
-                <td>+91 9836113636</td>
+                <td><a href="tel:+919836113636">9836113636</a></td>
               </tr>
               <tr>
                 <td>34</td>
                 <td>NETAJI SUBHAS CHANDRA BOSE CANCER HOSPITAL</td>
                 <td>3081, Nayabad Main Rd, New Garia, Pancha Sayar, Kolkata, West Bengal 700094</td>
-                <td>+91 9874210007</td>
+                <td><a href="tel:+919874210007">9874210007</a></td>
               </tr>
               <tr>
                 <td>35</td>
                 <td>Nightingale Hospital</td>
                 <td>11, Shakespeare Sarani Rd, Kankaria Estates, Park Street area, Kolkata, West Bengal 700071</td>
-                <td>033 2282 7971</td>
+                <td><a href="tel:03322827971">033 2282 7971</a></td>
               </tr>
               <tr>
                 <td>36</td>
                 <td>North City Hospital</td>
                 <td>73 & 81B, Bagmari Road, Near Ultadanga Hudco Stop, Kolkata, West Bengal 700054</td>
-                <td>033 6605 0999</td>
+                <td><a href="tel:03366050999">033 6605 0999</a></td>
               </tr>
               <tr>
                 <td>37</td>
                 <td>Ohio Hospital</td>
                 <td>Plot No. DG-6 Service Road, Street Number 358, Newtown, Kolkata, West Bengal 700156</td>
-                <td>033 6602 6602</td>
+                <td><a href="tel:03366026602">033 6602 6602</a></td>
               </tr>
               <tr>
                 <td>38</td>
                 <td>OPD, R.G.Kar Medical College and Hospital</td>
                 <td>1, Khudiram Bose Sarani, Bidhan Sarani, Shyam Bazar, Kolkata, West Bengal 700004</td>
-                <td>033 2555 7656</td>
+                <td><a href="tel:03325557656">033 2555 7656</a></td>
               </tr>
               <tr>
                 <td>39</td>
                 <td>Peerless Hospital</td>
                 <td> 360, Pancha Sayar Rd, Sahid Smirity Colony, Pancha Sayar, Kolkata, West Bengal 700094</td>
-                <td>033 4011 1222</td>
+                <td><a href="tel:03340111222">033 4011 1222</a></td>
               </tr>
               <tr>
                 <td>40</td>
                 <td>Rabindranath Tagore International Institute Of Cardiac Sciences</td>
                 <td>Premises No: 1489, Mukundapur Main Road, 124, Eastern Metropolitan Bypass, Mukundapur, Kolkata, West Bengal 700099</td>
-                <td>+91 9903335544</td>
+                <td><a href="tel:+919903335544">9903335544</a></td>
               </tr>
               <tr>
                 <td>41</td>
                 <td>Ruby General Hospital</td>
                 <td>E. M. Bypass, Sector I, Kasba Golpark, Kolkata, West Bengal 700107</td>
-                <td>033 6687 18004</td>
+                <td><a href="tel:03366871800">033 6687 1800</a></td>
               </tr>
               <tr>
                 <td>42</td>
                 <td>Sambhunath Pandit Hospital</td>
                 <td>11, Elgin Rd, Sreepally, Bhowanipore, Kolkata, West Bengal 700020</td>
-                <td>033 2302 2820</td>
+                <td><a href="tel:03323022820">033 2302 2820</a></td>
               </tr>
               <tr>
                 <td>43</td>
                 <td>Shree Vishudhanand Hospital</td>
                 <td>35/37, Burtolla St, Raja Katra, Bara Bazar, Jorasanko, Kolkata, West Bengal 700007</td>
-                <td> 033 4023 3030</td>
+                <td><a href="tel:03340233030">033 4023 3030</a></td>
               </tr>
               <tr>
                 <td>44</td>
                 <td>South Eastern Railway Central Hospital</td>
                 <td>Quarters, S Eastern Railway, Rail Colony, Garden Reach, Kolkata, West Bengal 700043</td>
-                <td>033 2439 7828</td>
+                <td><a href="tel:03324397828">033 2439 7828</a></td>
               </tr>
               <tr>
                 <td>45</td>
                 <td>Tata Medical Center</td>
                 <td>14, MAR(E-W), DH Block(Newtown), Action Area I, Newtown, Kolkata, West Bengal</td>
-                <td>033 6605 7000</td>
+                <td><a href="tel:03366057000">033 6605 7000</a></td>
               </tr>
               <tr>
                 <td>46</td>
                 <td>The Calcutta Homoeopathic Medical College & Hospital</td>
                 <td>265, 266, Acharya Prafulla Chandra Rd, Yogi Para, Garpar, Machuabazar, Kolkata, West Bengal 700009</td>
-                <td>033 2351 7675</td>
+                <td><a href="tel:03323517675">033 2351 7675</a></td>
               </tr>
               <tr>
                 <td>47</td>
                 <td>TRA General Hospital</td>
                 <td> 7, Dr Biresh Guha St, Park Circus, Ballygunge, Kolkata, West Bengal 700017</td>
-                <td>033 4011 6800</td>
+                <td><a href="tel:03340116800">033 4011 6800</a></td>
               </tr>
               <tr>
                 <td>48</td>
                 <td>Vivekananda Hospital & Research Institute</td>
                 <td>P-516/1, Banamali Naskar Road, Parnasree Palli, Behala, Kolkata, West Bengal 700060</td>
-                <td>033 2406 9353</td>
+                <td><a href="tel:03324069353">033 2406 9353</a></td>
               </tr>
               <tr>
                 <td>49</td>
                 <td>Woodlands Multispeciality Hospital Limited</td>
                 <td> 8/5, Alipore Rd, Alipore, Kolkata, West Bengal 700027</td>
-                <td>033 2456 7075</td>
+                <td><a href="tel:03324567075">033 2456 7075</a></td>
               </tr>
               <tr>
                 <td>50</td>
                 <td>Yashoda Hospitals Medical Information Centre</td>
                 <td>Victoria Medical Center, Marss Education Building, Kolkata, West Bengal 700103</td>
-                <td>+91 9108032911</td>
+                <td><a href="tel:+919108032911">9108032911</a></td>
               </tr>
               <tr>
                 <td>51</td>
                 <td>Zenith Super Specialist Hospital</td>
                 <td>9, 3, Feeder Rd, Rathtala, Belghoria, Kolkata, West Bengal 700056</td>
-                <td>033 2544 4391</td>
+                <td><a href="tel:03325444391">033 2544 4391</a></td>
               </tr>
           </table>
             </div>
