--- a/hospital/templates/specialist_doctor.html
+++ b/hospital/templates/specialist_doctor.html
@@ -85,7 +85,7 @@
             <table>
               <tr>
                 <th>Doctor name</th>
-                <th>Location</th>
+                <th style="text-align: center;">Location</th>
                 <th>Consultancy fee</th>
               </tr>
             {% for doctor in doctors.items %}
