--- a/hospital/templates/view_announcements.html
+++ b/hospital/templates/view_announcements.html
@@ -1,27 +1,35 @@
-{% extends "layout.html" %}
-{% block content %}
+{% extends "layout.html" %} {% block content %} {% if announcements != None %}
 {% for announcement in announcements.items %}
-    <h3 class="mb-3">Announcement by {{ announcement.admin.username }}</h3>
-        <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + announcement.admin.image_file) }}">
-          <div class="media-body">
-            <div class="article-metadata">
-              <small class="text-muted">{{ announcement.created_on.strftime('%Y-%m-%d') }}</small>
-            </div>
-            <h4>{{ announcement.title }}</h4>
-            <p class="article-content">{{ announcement.content }}</p>
-          </div>
-        </article>
-    {% endfor %}
-    {% for page_num in announcements.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-      {% if page_num %}
-        {% if announcements.page == page_num %}
-          <a class="btn btn-info mb-4" href="{{ url_for('view_announcement', page=page_num) }}">{{ page_num }}</a>
-        {% else %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('view_announcement', page=page_num) }}">{{ page_num }}</a>
-        {% endif %}
-      {% else %}
-        ...
-      {% endif %}
-    {% endfor %}
-{% endblock content %}
+<h3 class="mb-3">Announcement by {{ announcement.admin.username }}</h3>
+<article class="media content-section">
+  <img
+    class="rounded-circle article-img"
+    src="{{ url_for('static', filename='profile_pics/' + announcement.admin.image_file) }}"
+  />
+  <div class="media-body">
+    <div class="article-metadata">
+      <small class="text-muted"
+        >{{ announcement.created_on.strftime('%Y-%m-%d') }}</small
+      >
+    </div>
+    <h4>{{ announcement.title }}</h4>
+    <p class="article-content">{{ announcement.content }}</p>
+  </div>
+</article>
+{% endfor %} {% for page_num in announcements.iter_pages(left_edge=1,
+right_edge=1, left_current=1, right_current=2) %} {% if page_num %} {% if
+announcements.page == page_num %}
+<a
+  class="btn btn-info mb-4"
+  href="{{ url_for('view_announcement', page=page_num) }}"
+  >{{ page_num }}</a
+>
+{% else %}
+<a
+  class="btn btn-outline-info mb-4"
+  href="{{ url_for('view_announcement', page=page_num) }}"
+  >{{ page_num }}</a
+>
+{% endif %} {% else %} ... {% endif %} {% endfor %} {% else %}
+<h4>There are no announcements made by Life Care yet.</h4>
+{% endif %} {% endblock content %}
